fix clipping issue for the password box on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ hr {
 
 }
 .password-area {
+    box-sizing: border-box;
     padding: 16px;
     border: 2px dashed black;
     border-radius: 5px;
